@@ -11,6 +11,8 @@
    using pkg-config to locate libmpg123 et al., prompted by
    https://github.com/madebr/mpg123/pull/11).
 -- Only libmpg123 component installs fmt123.h.
+- out123:
+-- added --libversion
 
 1.32.3
 ------
